# ScoutRobot

./: README.md
Elegoo/: Base Plate.SLDPRT  Battery Cover.SLDPRT  Battery Holder.SLDPRT  Battery.SLDPRT  Bluetooth Module.SLDPRT  Cap Screw_M3_10mm.SLDPRT  Cap Screw_M3_14mm.SLDPRT  Cap Screw_M3_30mm.SLDPRT  Cap Screw_M3_7mm.SLDPRT  Dead Plate.SLDPRT  ESP32.SLDPRT  Elegoo.SLDASM  Expansion Board.SLDPRT  Gyroscope sensor.SLDPRT  Hex Nut_M1.6.SLDPRT  Hex Nut_M2.SLDPRT  Hex Nut_M3.SLDPRT  Hex Spacer Screw.SLDPRT  Line Tracking Module.SLDPRT  Long Hex Nut.sldprt  Motor Driver.SLDPRT  Motor Mount Block.SLDPRT  Motor.SLDPRT  Pan Screw_M1.6.SLDPRT  Pan Screw_M2_10mm.SLDPRT  Pan Screw_M2_25mm.SLDPRT  Pan Screw_M3.SLDPRT  Sensor Mount Bracket.SLDPRT  Servo.SLDPRT  Spacer.SLDPRT  Top Plate.SLDPRT  Ultrasonic Sensor.SLDPRT  (+1 more)
Elegoo.SLDASM/: CMakeLists.txt  package.xml
elegoo_emdedded/custom_driver/: CMakeLists.txt
elegoo_emdedded/custom_driver/inc/: MPU6050.h  TCRT5000.h  common.h  dc_motor.h  mqtt.h
elegoo_emdedded/custom_driver/src/: MPU6050.cpp  TCRT5000.cpp  dc_motor.cpp  mqtt.cpp  ultrasonic.cpp
embedded_iot/hall/: CMakeLists.txt
embedded_iot/hall/button/: button.cpp  button.h
embedded_iot/hall/dc_motor/: dc_motor.cpp  dc_motor.h
embedded_iot/hall/led/: led.cpp  led.h
embedded_iot/hall/mpu6050/: MPU6050.cpp  MPU6050.h
embedded_iot/hall/pid/: pid.cpp  pid.h
embedded_iot/hall/pot/: pot.cpp  pot.h
embedded_iot/hall/tcrt5000/: TCRT5000.cpp  TCRT5000.h
embedded_iot/hall/ultrasonic/: ultrasonic.cpp  ultrasonic.h
embedded_iot/lib/: CMakeLists.txt  common.h
(+189 files in other folders)
